Header on mobile - design fix

--- a/css/theme.less
+++ b/css/theme.less
@@ -126,6 +126,9 @@ body {
     @media @tablet {
     	display: block;
     }
+    @media @mobile {
+    	margin-bottom: 30px;
+    }
     .widget.extendednavigation {
     	// Flex child
     	-webkit-box-ordinal-group: 1;
